--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
   color: rgb(var(--foreground-rgb));
+  background: #cfeae8;
+}
+
+.hero {
   background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    134deg,
+    #0e988e 0%,
+    rgba(13, 137, 128, 0.64) 54.18%,
+    rgba(83, 124, 228, 0) 100%
+  );
+}
+
+.maxWidth {
+  width: 90rem;
+  margin: 0 auto;
 }
