--- a/app/globals.css
+++ b/app/globals.css
@@ -20,3 +20,9 @@ body {
   width: 90rem;
   margin: 0 auto;
 }
+
+.productNav {
+  border-radius: 2.6875rem;
+  background: #fff;
+  box-shadow: 0px 4px 16px 0px rgba(8, 92, 96, 0.25);
+}
