--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,12 @@ body {
   );
 }
 
+.overlay {
+  background: rgba(0, 0, 0, 0.404);
+  height: 200vh;
+  top: -8rem;
+}
+
 .maxWidth {
   max-width: 90rem;
   margin: 0 auto;
@@ -26,4 +32,8 @@ body {
   border-radius: 2.6875rem;
   background: #fff;
   box-shadow: 0px 4px 16px 0px rgba(8, 92, 96, 0.25);
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
 }
